syntax = "proto3";

package common;

option go_package = "github.com/yb2020/odoc-proto/gen/go/common";

message CommentatorInfoView {
  string nickName = 1;
  string avatarCdnUrl = 2;
  string userId = 3;
}